# note

./: .gitignore  .notes_  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py  callback.py  cli.py
app/commands/: add.py  config.py  delete.py  init.py  list.py  status.py
app/core/: __init__.py  errors.py  models.py  repository.py  storage.py  utils.py
tests/: add_test.py  cli_test.py  conftest.py  delete_test.py  init_test.py  list_test.py  status_test.py
