[tool.poetry]
name = "notecli"
version = "0.1.1"
description = "CLI application to create and manage notes."
authors = ["Mateusz Karandys <mateusz.karandys@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.15.3"
click = "<8.2"
pytest = "^8.3.5"
toml = "^0.10.2"

[tool.poetry.scripts]
note = "app.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
